--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,10 @@ dependencies:
   get: ^4.7.2
   flutter_animate: ^4.5.2
   google_fonts: ^6.3.0
+  dio: ^5.9.0
+  permission_handler: ^12.0.1
+  geolocator: ^14.0.2
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
